--- a/package.json
+++ b/package.json
@@ -10,11 +10,35 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-vector-icons/ant-design": "^12.3.0",
+    "@react-native-vector-icons/common": "^12.3.0",
+    "@react-native-vector-icons/entypo": "^12.3.0",
+    "@react-native-vector-icons/evil-icons": "^12.3.0",
+    "@react-native-vector-icons/feather": "^12.3.0",
+    "@react-native-vector-icons/fontawesome": "^12.3.0",
+    "@react-native-vector-icons/fontisto": "^12.3.0",
+    "@react-native-vector-icons/ionicons": "^12.3.0",
+    "@react-native-vector-icons/material-design-icons": "^12.3.0",
+    "@react-native-vector-icons/material-icons": "^12.3.0",
+    "@react-native/new-app-screen": "0.81.0",
+    "@react-navigation/bottom-tabs": "^7.4.7",
+    "@react-navigation/drawer": "^7.5.8",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "nativewind": "^4.2.1",
     "react": "19.0.0",
-    "react-native": "0.79.0"
+    "react-native": "0.79.0",
+    "react-native-reanimated": "^4.1.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "^4.16.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
     "@react-native-community/cli": "18.0.0",
@@ -29,8 +53,10 @@
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "react-test-renderer": "19.0.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.0.4"
   },
   "engines": {
