--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@react-navigation/native-stack": "^7.3.26",
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^5.0.2",
+    "dayjs": "^1.11.18",
     "nativewind": "^4.2.1",
     "react": "19.0.0",
     "react-native": "0.79.0",
+    "react-native-calendars": "^1.1313.0",
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.16.0",
