--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@react-navigation/native-stack": "^7.3.26",
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^5.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "nativewind": "^4.2.1",
     "react": "19.0.0",
@@ -36,7 +38,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.16.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-worklets": "^0.5.1"
+    "react-native-worklets": "^0.5.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
