--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/slider": "^5.0.1",
     "@react-native-vector-icons/ant-design": "^12.3.0",
     "@react-native-vector-icons/common": "^12.3.0",
     "@react-native-vector-icons/entypo": "^12.3.0",
@@ -30,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
+    "lucide-react-native": "^0.544.0",
     "nativewind": "^4.2.1",
     "react": "19.0.0",
     "react-native": "0.79.0",
