feat: added auth routes in backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,11 @@
     "build:watch": "tsc --watch",
     "dev": "dotenv -e .env.local -- bun run --hot src/index.ts",
     "start": "dotenv -e .env -- node dist/index.js",
-    "docker:up": "docker-compose up -d",
-    "docker:up:db": "docker-compose up -d postgres",
-    "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f",
-    "docker:clean": "docker-compose down -v --remove-orphans",
+    "docker:up": "docker compose up -d",
+    "docker:up:db": "docker compose up -d postgres",
+    "docker:down": "docker compose down",
+    "docker:logs": "docker compose logs -f",
+    "docker:clean": "docker compose down -v --remove-orphans",
     "db:generate": "prisma generate",
     "db:push:local": "dotenv -e .env.local -- prisma db push",
     "db:push:prod": "dotenv -e .env -- prisma db push",
