--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "19.0.0",
     "react-native": "0.79.0",
     "react-native-calendars": "^1.1313.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.16.0",
