--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@react-native-community/slider": "^5.0.1",
     "@react-native-vector-icons/ant-design": "^12.3.0",
     "@react-native-vector-icons/common": "^12.3.0",
@@ -34,6 +35,7 @@
     "lucide-react-native": "^0.544.0",
     "nativewind": "^4.2.1",
     "react": "19.0.0",
+    "react-hook-form": "^7.63.0",
     "react-native": "0.79.0",
     "react-native-calendars": "^1.1313.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -42,7 +44,8 @@
     "react-native-screens": "^4.16.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.5.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
