--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "dev": "concurrently -n \"app,android,backend,db\" -c \"blue,green,yellow,magenta\" \"bun run start\" \"bun run android\" \"cd backend && bun run dev\" \"bun run db:studio:local\""
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -28,6 +29,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@types/react-native-vector-icons": "^6.4.18",
+    "axios": "^1.12.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,12 +40,16 @@
     "react-hook-form": "^7.63.0",
     "react-native": "0.79.0",
     "react-native-calendars": "^1.1313.0",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "^3.3.3",
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.16.0",
+    "react-native-svg": "^15.13.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.5.1",
+    "sonner-native": "^0.21.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
   },
