--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "setup:prod": "bun install && bun run build && bun run db:migrate:prod",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
-    "clean": "rm -rf dist node_modules .next"
+    "clean": "rm -rf dist node_modules .next",
+    "seed": "bun run prisma/seed.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
