--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-native": "0.79.0",
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-material-menu": "^2.0.0",
     "react-native-mmkv": "^3.3.3",
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "5.4.0",
