--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "db:migrate:local": "dotenv -e .env.local -- prisma migrate dev",
     "db:migrate:prod": "dotenv -e .env -- prisma migrate deploy",
     "db:studio:local": "dotenv -e .env.local -- prisma studio",
-    "db:seed:local": "dotenv -e .env.local -- bun run src/seed.ts",
+    "db:seed:local": "dotenv -e .env.local -- bun run prisma/seed.ts",
+    "db:seed:prod": "dotenv -e .env -- bun run prisma/seed.ts",
     "setup:local": "bun install && bun run docker:up && sleep 5 && bun run db:push:local && bun run db:generate",
     "setup:prod": "bun install && bun run build && bun run db:migrate:prod",
     "test": "echo \"Error: no test specified\" && exit 1",
