--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "build": "tsc -b && tsc-alias -p tsconfig-alias.json && tsc-esm-fix --target=dist",
-    "start": "dotenv -e .env -- node dist/index.js",
+    "start": "node dist/index.js",
+    "start:local": "dotenv -e .env -- node dist/index.js",
     "build:watch": "tsc --watch",
     "dev": "dotenv -e .env.local -- bun run --hot src/index.ts",
     "docker:up": "docker compose up -d",
@@ -49,6 +50,7 @@
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
