--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,12 @@ yarn-error.log
 **/generated
 
 **/dist
+
+src/config
+
+# Android release keystore
+android/app/my-release-key.keystore
+
+**/keystore.properties
+*.keystore
+!debug.keystore
