--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "tsc -b && tsc-alias -p tsconfig-alias.json && tsc-esm-fix --target=dist",
+    "build": "prisma generate && tsc -b && tsc-alias -p tsconfig-alias.json && tsc-esm-fix --target=dist",
     "start": "node dist/index.js",
     "start:local": "dotenv -e .env -- node dist/index.js",
     "build:watch": "tsc --watch",
